Changes in version 0.1.0
------------------------

- Add functionality to load MS/MS spectra from HMDB xml files.


Changes in version 0.0.3
------------------------

- Add CompoundIdFilter and CompoundNameFilter classes and filtering framework.


Changes in version 0.0.2
------------------------

- Define CompDb class and all functionality to create CompDb databases.
- createCompDb supports file names as input and create a database including
  annotations from all files.
- Add create-compounddb vignette.