@@ -25,6 +25,7 @@ exportMethods(intensity)
 exportMethods(mz)
 exportMethods(rtime)
 exportMethods(show)
+exportMethods(spectra)
 importClassesFrom(AnnotationFilter,AnnotationFilter)
 importClassesFrom(AnnotationFilter,AnnotationFilterList)
 importClassesFrom(AnnotationFilter,CharacterFilter)
@@ -42,6 +43,7 @@ importFrom(DBI,dbExecute)
 importFrom(DBI,dbGetQuery)
 importFrom(DBI,dbListTables)
 importFrom(DBI,dbWriteTable)
+importFrom(ProtGenerics,spectra)
 importFrom(RSQLite,dbConnect)
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,SimpleList)
