@@ -1,6 +1,8 @@
 Changes in version 0.1.0
 ------------------------
 
+- Add spectra method to extract spectra from the CompDb database.
+- Add functionality to store MS/MS spectra in a CompDb database.
 - Add functionality to load MS/MS spectra from HMDB xml files.
 
 
